[package]
name = "thisbplustree"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = {version = "0.45.1", features = ["serde","default"]}
serde = {version = "*", features = ["derive"]}
serde_json = "*"
proc-macro-error = "1"
super ="*"
multiaddr = { version = "0.14.0" }
async-std = { version = "*", features = ["attributes"]}
async-trait = "0.1"
env_logger = "0.9.0"
clap = {version = "3.2.5", features = ["derive"]}
tokio = {version="1.9", features = ["full"]}
bytes = "1"
futures = "0.3.1"
futures-timer = "3.0.2" # Explicit dependency to be used in `wasm-bindgen` feature
getrandom = "0.2.3" # Explicit dependency to be used in `wasm-bindgen` feature
instant = "0.1.11" # Explicit dependency to be used in `wasm-bindgen` feature
lazy_static = "1.2"
parking_lot = "0.12.0"
pin-project = "1.0.0"
rand = "0.7.3" # Explicit dependency to be used in `wasm-bindgen` feature
smallvec = "1.6.1"
multishot = "*"
void = "*"
bounded-vec = "*"
